--- a/angular.json
+++ b/angular.json
@@ -93,11 +93,60 @@
             ],
             "scripts": []
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "to_do_list:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "to_do_list:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "ct": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "to_do_list:serve",
+            "watch": true,
+            "headless": false,
+            "testingType": "component"
+          },
+          "configurations": {
+            "development": {
+              "devServerTarget": "to_do_list:serve:development"
+            }
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "to_do_list:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "to_do_list:serve:production"
+            }
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "321ade56-fd5b-44c9-bbd9-d8e421fe48da"
+    "analytics": "321ade56-fd5b-44c9-bbd9-d8e421fe48da",
+    "schematicCollections": [
+      "@cypress/schematic",
+      "@schematics/angular"
+    ]
   }
 }
